add_executable(example04 example04.cpp)
target_link_libraries(example04 pthread)
add_executable(example3_1 example3_1.cpp)
target_link_libraries(example3_1 pthread)
add_executable(example3_2 example3_2.cpp)
target_link_libraries(example3_2 pthread)
add_executable(example3_3 example3_3.cpp)
target_link_libraries(example3_3 pthread)
add_executable(example3_4 example3_4.cpp)
target_link_libraries(example3_4 pthread)
add_executable(example6_1 example6_1.cpp)
target_link_libraries(example6_1 pthread)
add_executable(example6_2 example6_2.cpp)
target_link_libraries(example6_2 pthread)
add_executable(example6_3 example6_3.cpp)
target_link_libraries(example6_3 pthread)