add_executable(example2_1 example2_1.cpp)
add_executable(example2_2 example2_2.cpp)
add_executable(example2_3 example2_3.cpp)
add_executable(example2_4 example2_4.cpp)
add_executable(example2_5 example2_5.cpp)
add_executable(example2_6 example2_6.cpp)
add_executable(example2_7 example2_7.cpp)
# add_executable(example2_8 example2_8.cpp)
add_executable(example2_12 example2_12.cpp)
add_executable(example2_13 example2_13.cpp)