add_executable(example3_16 example3_16.cpp)
add_executable(example3_17 example3_17.cpp)
add_executable(example3_18 example3_18.cpp)
add_executable(example3_19 example3_19.cpp)
add_executable(example3_20 example3_20.cpp)
add_executable(example3_21 example3_21.cpp)
add_executable(example3_22 example3_22.cpp)
add_executable(example3_23 example3_23.cpp)
add_executable(example3_24 example3_24.cpp)
add_executable(example3_25 example3_25.cpp)
add_executable(example3_34 example3_34.cpp)
add_executable(example3_36 example3_36.cpp)
add_executable(example3_37 example3_37.cpp)
add_executable(example3_45 example3_45.cpp)
add_executable(example3_51 example3_51.cpp)