add_executable(example6_7 example6_7.cpp)
add_executable(example6_8 example6_8.cpp)
add_executable(example6_18 example6_18.cpp)
target_link_libraries(example6_18 pthread)
add_executable(example6_19 example6_19.cpp)
target_link_libraries(example6_19 pthread)
add_executable(example6_20 example6_20.cpp)
target_link_libraries(example6_20 pthread)
add_executable(example6_21 example6_21.cpp)
target_link_libraries(example6_21 pthread)
add_executable(example6_23 example6_23.cpp)
target_link_libraries(example6_23 pthread)
add_executable(example6_28 example6_28.cpp)
add_executable(example6_29 example6_29.cpp)